# sys-info

./: Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh
net_msgs/: CMakeLists.txt  package.xml
net_node/: package.xml  setup.cfg  setup.py
net_node/net_node/: net_node.py
sys_info/: package.xml  setup.py
sys_info/sys_info/: network.py  ros.py  sys_info.py  system_vcgm.py  wireless.py
sys_msgs/: CMakeLists.txt  package.xml
sys_msgs/msg/: NetworkAddress.msg  NetworkDevice.msg
sys_msgs/srv/: SystemInfo.srv
sys_node/: package.xml  setup.cfg  setup.py
sys_node/sys_node/: sys_node.py
